--- a/KeyerTest/MainWindow.xaml
+++ b/KeyerTest/MainWindow.xaml
@@ -5,8 +5,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KeyerTest"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="720" Width="800">
+    
     <Grid>
-
+        <StackPanel Width="150" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin ="15 10 0 15">
+            <Button x:Name="ImportButton" Content="Импорт *.png" IsDefault="True" Margin ="0 0 0 10"/>
+            <Button x:Name="ExportButton" Content="Экспорт *.png" IsCancel="True"/>
+        </StackPanel>
+        <StackPanel>
+            <Image Source="/KeyerTest;component/Images/BG.png" Height="540" VerticalAlignment="Top" Margin ="0 10 0 10"/>
+        </StackPanel>
+        <StackPanel Width="100" VerticalAlignment="Bottom" Margin="0 0 0 15" Background="Cornsilk">
+            <TextBlock>Background color</TextBlock>
+            <TextBlock>R</TextBlock><TextBox >255</TextBox>
+            <TextBlock>G</TextBlock><TextBox >255</TextBox>
+            <TextBlock>B</TextBlock><TextBox >255</TextBox>
+            <Button x:Name="ChooseColor" Content="Установить цвет" IsCancel="True" Margin ="0 10 0 0"/>
+        </StackPanel>
     </Grid>
 </Window>
