--- a/KeyerTest/MainWindow.xaml
+++ b/KeyerTest/MainWindow.xaml
@@ -15,12 +15,15 @@
         <StackPanel>
             <Image Source="/KeyerTest;component/Images/BG.png" Height="540" VerticalAlignment="Top" Margin ="0 10 0 10"/>
         </StackPanel>
-        <StackPanel Width="100" VerticalAlignment="Bottom" Margin="0 0 0 15" Background="Cornsilk">
-            <TextBlock>Background color</TextBlock>
-            <TextBlock>R</TextBlock><TextBox >255</TextBox>
-            <TextBlock>G</TextBlock><TextBox >255</TextBox>
-            <TextBlock>B</TextBlock><TextBox >255</TextBox>
-            <Button x:Name="ChooseColor" Content="Установить цвет" IsCancel="True" Margin ="0 10 0 0"/>
+        <StackPanel Width="200" VerticalAlignment="Bottom" Orientation="Horizontal">
+            <StackPanel Width="100" VerticalAlignment="Bottom" Margin="0 0 0 15" Background="Cornsilk">
+                <TextBlock>Background color</TextBlock>
+                <TextBlock>R</TextBlock><TextBox x:Name="RBlock" TextChanged="ColorBlock_OnTextChanged">255</TextBox>
+                <TextBlock>G</TextBlock><TextBox x:Name="GBlock" TextChanged="ColorBlock_OnTextChanged">255</TextBox>
+                <TextBlock>B</TextBlock><TextBox x:Name="BBlock" TextChanged="ColorBlock_OnTextChanged">255</TextBox>
+                <Button x:Name="ChooseColor" Content="Очистить цвет" IsCancel="True" Margin ="0 10 0 0"/>
+            </StackPanel>
+            <StackPanel Background="White" HorizontalAlignment="Right" Name="ColorDisplay" Width="100" Height="100" Margin="15"></StackPanel>
         </StackPanel>
     </Grid>
 </Window>
