--- a/KeyerTest/MainWindow.xaml
+++ b/KeyerTest/MainWindow.xaml
@@ -9,11 +9,11 @@
     
     <Grid>
         <StackPanel Width="150" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin ="15 10 0 15">
-            <Button x:Name="ImportButton" Content="Импорт *.png" IsDefault="True" Margin ="0 0 0 10"/>
+            <Button x:Name="ImportButton" Click="OnFileImportClicked" Content="Импорт *.png" IsDefault="True" Margin ="0 0 0 10"/>
             <Button x:Name="ExportButton" Content="Экспорт *.png" IsCancel="True"/>
         </StackPanel>
         <StackPanel>
-            <Image Source="/KeyerTest;component/Images/BG.png" Height="540" VerticalAlignment="Top" Margin ="0 10 0 10"/>
+            <Image x:Name="MainImage" Source="/KeyerTest;component/Images/BG.png" Height="540" VerticalAlignment="Top" Margin ="0 10 0 10"/>
         </StackPanel>
         <StackPanel Width="200" VerticalAlignment="Bottom" Orientation="Horizontal">
             <StackPanel Width="100" VerticalAlignment="Bottom" Margin="0 0 0 15" Background="Cornsilk">
