--- a/KeyerTest/MainWindow.xaml
+++ b/KeyerTest/MainWindow.xaml
@@ -21,7 +21,7 @@
                 <TextBlock>R</TextBlock><TextBox x:Name="RBlock" TextChanged="ColorBlock_OnTextChanged">255</TextBox>
                 <TextBlock>G</TextBlock><TextBox x:Name="GBlock" TextChanged="ColorBlock_OnTextChanged">255</TextBox>
                 <TextBlock>B</TextBlock><TextBox x:Name="BBlock" TextChanged="ColorBlock_OnTextChanged">255</TextBox>
-                <Button x:Name="ChooseColor" Content="Очистить цвет" IsCancel="True" Margin ="0 10 0 0"/>
+                <Button x:Name="ChooseColor" Click="ChooseColor_OnClick" Content="Очистить цвет" IsCancel="True" Margin ="0 10 0 0"/>
             </StackPanel>
             <StackPanel Background="White" HorizontalAlignment="Right" Name="ColorDisplay" Width="100" Height="100" Margin="15"></StackPanel>
         </StackPanel>
